маленькі деталі +вправи готові, тести також

--- a/global.css
+++ b/global.css
@@ -4,8 +4,9 @@
 
 .bdf{
     background-color: #ffffff95;
-    color: #006bb8;
-    color:#003155;
-    color: #03528C;
+    color: #b5e7fc;
+    color:#4fcaff;
+    color: #b9faed;
+    
     color: #0095ff;
 }
