Реалізовано все окрім збереження статі та відображення останіх 3 тестів

--- a/global.css
+++ b/global.css
@@ -6,7 +6,7 @@
     background-color: #ffffff95;
     color: #b5e7fc;
     color:#4fcaff;
-    color: #b9faed;
+    color: #97d4f8;
     
     color: #0095ff;
 }
